implemented ref_num search
