# docs/swagger.json
@@ -183,13 +183,16 @@
                   "member_id": {
                     "example": "any"
                   },
-                  "member_name": {
+                  "member_first": {
+                    "example": "any"
+                  },
+                  "member_last": {
                     "example": "any"
                   },
                   "transaction_date": {
                     "example": "any"
                   },
-                  "reference_number": {
+                  "ref_num": {
                     "example": "any"
                   },
                   "amount": {
@@ -283,6 +286,9 @@
                   },
                   "status": {
                     "example": "any"
+                  },
+                  "req": {
+                    "example": "any"
                   }
                 }
               }
@@ -320,6 +326,9 @@
                     "example": "any"
                   },
                   "status": {
+                    "example": "any"
+                  },
+                  "req": {
                     "example": "any"
                   }
                 }
@@ -410,6 +419,43 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/transact/obtain_record/by_ref_num/{ref_num}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "ref_num",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
